--- a/ProjectHtml/huracan.html
+++ b/ProjectHtml/huracan.html
@@ -4,26 +4,23 @@
 	<title>
 		Huracan
 	</title>
-		<link rel="stylesheet" type="text/css" href="/Css/960_12_col.css">
-	<link rel="stylesheet" type="text/css" href="/Css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/Css/text.css">
-	<link rel="stylesheet" type="text/css" href="/Css/style.css">
-	<link rel="stylesheet" type="text/css" href="/Css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="Css/960_12_col.css">
+	<link rel="stylesheet" type="text/css" href="Css/reset.css">
+	<link rel="stylesheet" type="text/css" href="Css/text.css">
+	<link rel="stylesheet" type="text/css" href="Css/style.css">
+	<link rel="stylesheet" type="text/css" href="Css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
-
+	<meta charset="utf-8">
 </head>
 <body>
 	<header>
-		<img src="/Images/logo.png" alt="LAMBORGHINI">
+		<img src="Images/logo.png" alt="LAMBORGHINI">
 		
 		<nav class="navigation">
 			
-			<span>
 				<h2 id="mainheading">
 					Lamborghini
-				</h2>
-			</span>
-			
+				</h2>	
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About</a></li>
