--- a/ProjectHtml/venon.html
+++ b/ProjectHtml/venon.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>
 		Venono
 	</title>
-		<link rel="stylesheet" type="text/css" href="/Css/960_12_col.css">
-	<link rel="stylesheet" type="text/css" href="/Css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/Css/text.css">
-	<link rel="stylesheet" type="text/css" href="/Css/style.css">
-	<link rel="stylesheet" type="text/css" href="/Css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="Css/960_12_col.css">
+	<link rel="stylesheet" type="text/css" href="Css/reset.css">
+	<link rel="stylesheet" type="text/css" href="Css/text.css">
+	<link rel="stylesheet" type="text/css" href="Css/style.css">
+	<link rel="stylesheet" type="text/css" href="Css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
-
+	<meta charset="utf-8">
 </head>
+
 <body>
 	<header>
-		<img src="/Images/logo.png" alt="LAMBORGHINI">
-		
+		<img src="Images/logo.png" alt="LAMBORGHINI">
 		<nav class="navigation">
-			
-			<span>
-				<h2 id="mainheading">
-					Lamborghini
-				</h2>
-			</span>
-			
+			<h2 id="mainheading">
+				Lamborghini
+			</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About</a></li>
@@ -31,7 +28,6 @@
 				<li><a href="#">Profile</a></li>
 				<li><a href="#">Settings</a></li>
 				<li><a href="#">Logout</a></li>
-
 			</ul>
 		</nav>
 	</header>
@@ -39,22 +35,18 @@
 		<div id="venon-hero">
 			<h1><em>You know your Lambhorgini is on fire</em></h1>
 		</div>
-
-
-
 	</div>
-
-		<footer>
-			<h1>
-				Lamborghini.com			
-			</h1>
-			<ul>
-				<li><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></li>
-				<li><i class="fa fa-google-plus fa-3x" aria-hidden="true"></i></li>
-				<li><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></li>
-				<li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
-			</ul>
-		</footer>
-
+	<footer>
+		<h1>
+			Lamborghini.com			
+		</h1>
+		<ul>
+			<li><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-google-plus fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
+		</ul>
+	</footer>
 </body>
+
 </html>
